--- a/Malefiz/app/src/main/AndroidManifest.xml
+++ b/Malefiz/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CharacterSelectionActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_character_selection"
+            android:theme="@style/FullscreenTheme"></activity>
     </application>
 
 </manifest>
