--- a/AndroidStudioProject/android/build.gradle
+++ b/AndroidStudioProject/android/build.gradle
@@ -19,6 +19,14 @@ android {
         minSdkVersion 8
         targetSdkVersion 23
     }
+    lintOptions {
+        // set to true to turn off analysis progress reporting by lint
+        quiet true
+        // if true, stop the gradle build if errors are found
+        abortOnError false
+        // if true, only report errors
+        ignoreWarnings true
+    }
 }
 
 
