--- a/AndroidStudioProject/core/build.gradle
+++ b/AndroidStudioProject/core/build.gradle
@@ -10,6 +10,43 @@ eclipse.project {
     name = appName + "-core"
 }
 dependencies {
+    testCompile 'junit:junit:4.12'
     compile 'junit:junit:4.12'
 }
 
+
+apply plugin: 'jacoco'
+jacoco {
+    toolVersion = '0.7.6.201602180812'
+}
+
+
+// Edit covered scope if needed
+// For my part I like having the coverage of both application and tests
+def coverageSourceDirs = [
+        '../core/src'
+]
+task jacocoTestReport2(type: JacocoReport, dependsOn: "test") {
+    group = "Reporting"
+
+    description = "Generate Jacoco coverage reports"
+
+    classDirectories = fileTree(
+            dir: '../core/build/intermediates/classes',
+            excludes: ['**/R.class',
+                       '**/R$*.class',
+                       '**/*$ViewInjector*.*',
+                       '**/BuildConfig.*',
+                       '**/Manifest*.*']
+    )
+
+    additionalSourceDirs = files(coverageSourceDirs)
+    sourceDirectories = files(coverageSourceDirs)
+    executionData = files('../app/build/jacoco/jacoco.exec')
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+//end Jacoco config
