--- a/AndroidStudioProject/build.gradle
+++ b/AndroidStudioProject/build.gradle
@@ -49,9 +49,9 @@ project(":android") {
 project(":core") {
     apply plugin: "java"
 
-
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile 'junit:junit:4.12'
     }
 }
 
