--- a/AndroidStudioProject/core/build.gradle
+++ b/AndroidStudioProject/core/build.gradle
@@ -2,16 +2,11 @@ apply plugin: "java"
 
 sourceCompatibility = 1.6
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-
 sourceSets.main.java.srcDirs = [ "src/" ]
-
+sourceSets.test.java.srcDirs = [ "junittests/" ]
 
 eclipse.project {
     name = appName + "-core"
-}
-dependencies {
-    testCompile 'junit:junit:4.12'
-    compile 'junit:junit:4.12'
 }
 
 
