--- a/AndroidStudioProject/build.gradle
+++ b/AndroidStudioProject/build.gradle
@@ -46,6 +46,15 @@ project(":android") {
     }
 }
 
+project(":core") {
+    apply plugin: "java"
+
+    dependencies {
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile 'junit:junit:4.12'
+    }
+}
+
 tasks.eclipse.doLast {
     delete ".project"
 }
