--- a/AndroidStudioProject/build.gradle
+++ b/AndroidStudioProject/build.gradle
@@ -31,7 +31,7 @@ allprojects {
 }
 
 project(":android") {
-    apply plugin: "android"
+    apply plugin: "com.android.application"
 
     configurations { natives }
 
@@ -48,10 +48,13 @@ project(":android") {
 
 project(":core") {
     apply plugin: "java"
+    sourceSets.main.java.srcDirs = [ "src/com/malefiz/game/" ]
+    sourceSets.test.java.srcDirs = [ "src/junittests/" ]
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile 'junit:junit:4.12'
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+        testCompile 'junit:junit:4.12'
     }
 }
 
